<resources>
    <string name="app_name">Guess The Number</string>
    <string name="press_start">Click on Start to Begin</string>
    <string name="level1">Guess a Number in the range 0 - 100</string>
    <string name="level2">Guess a Number in the range 0 - 500</string>
    <string name="level3">Guess a Number in the range 0 - 1,000</string>
    <string name="level4">Guess a Number in the range 0 - 5,000</string>
    <string name="level5">Guess a Number in the range 0 - 10,000</string>
    <string name="level6">Guess a Number in the range 0 - 50,000</string>
    <string name="level7">Guess a Number in the range 0 - 100,000</string>
    <string name="level8">Guess a Number in the range 0 - 500,000</string>
    <string name="score">Score:</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="next_level">Next Level</string>
    <string name="hint">Hint</string>
    <string name="hints_left">0</string>
    <string name="no_more_hints">No more Hints!</string>
    <string name="trials">Trials Left</string>
    <string name="trials_left">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">×</string>
    <string name="enter">←</string>
    <string name="levelTag">Level:</string>
    <string name="level1Tag">Level:1</string>
    <string name="level2Tag">Level:2</string>
    <string name="level3Tag">Level:3</string>
    <string name="level4Tag">Level:4</string>
    <string name="level5Tag">Level:5</string>
    <string name="level6Tag">Level:6</string>
    <string name="level7Tag">Level:7</string>
    <string name="level8Tag">Level:8</string>
    <string name="game_lost">You Lost</string>
    <string name="game_won">You Won!</string>
    <string name="too_low">is too Low!</string>
    <string name="too_high">is too High!</string>
    <string name="correct">is Correct!</string>
    <string name="the_num_is">The number is</string>
    <string name="greater_than">greater than</string>
    <string name="the_corr_ans_is">The correct answer is</string>
    <string name="less_than">less than</string>

</resources>
