<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.diacious.guessthenumber.MainActivity">

    <TextView
        android:id="@+id/displayTv"
        android:layout_width="368dp"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:text = "@string/press_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/scoreTv" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        style="@style/titleBtnStyle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/displayTv" />

    <Button
        android:id="@+id/hintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        style="@style/titleBtnStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/hintsLeftTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints_left"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@+id/hintButton"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/hintButton"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/hintButton"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/trials_leftTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trials_left"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@color/colorPrimaryDark"
        android:layout_marginRight="5dp"
        android:padding="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/hintButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/hintButton"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/trialsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trials"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toLeftOf="@+id/trials_leftTv"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/hintButton"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/hintButton"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/nineB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/nine"
        style="@style/numBtnStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="numBtnClicked"
        app:layout_constraintRight_toLeftOf="@+id/eightB"
        app:layout_constraintBottom_toTopOf="@+id/sixB" />

    <Button
        android:id="@+id/eightB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/eight"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintRight_toLeftOf="@+id/sevenB"
        app:layout_constraintLeft_toRightOf="@+id/nineB"
        app:layout_constraintTop_toBottomOf="@+id/nineB"
        app:layout_constraintBottom_toTopOf="@+id/nineB" />

    <Button
        android:id="@+id/sevenB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/seven"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eightB"
        app:layout_constraintBottom_toTopOf="@+id/eightB"
        app:layout_constraintLeft_toRightOf="@+id/eightB" />

    <Button
        android:id="@+id/sixB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/six"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fiveB"
        app:layout_constraintBottom_toTopOf="@+id/threeB" />

    <Button
        android:id="@+id/fiveB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/five"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintLeft_toRightOf="@+id/sixB"
        app:layout_constraintRight_toLeftOf="@+id/fourB"
        app:layout_constraintBottom_toTopOf="@+id/sixB"
        app:layout_constraintTop_toBottomOf="@+id/sixB" />

    <Button
        android:id="@+id/fourB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/four"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintLeft_toRightOf="@+id/fiveB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveB"
        app:layout_constraintBottom_toTopOf="@+id/fiveB" />

    <Button
        android:id="@+id/threeB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/three"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/twoB"
        app:layout_constraintBottom_toTopOf="@+id/deleteB" />

    <Button
        android:id="@+id/twoB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/two"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintLeft_toRightOf="@+id/threeB"
        app:layout_constraintTop_toBottomOf="@+id/threeB"
        app:layout_constraintBottom_toTopOf="@+id/threeB"
        app:layout_constraintRight_toLeftOf="@+id/oneB" />

    <Button
        android:id="@+id/oneB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/one"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintBottom_toTopOf="@+id/twoB"
        app:layout_constraintTop_toBottomOf="@+id/twoB"
        app:layout_constraintLeft_toRightOf="@+id/twoB"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/deleteB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/delete"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintRight_toLeftOf="@+id/zeroB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/zeroB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/zero"
        style="@style/numBtnStyle"
        android:onClick="numBtnClicked"
        app:layout_constraintRight_toLeftOf="@+id/enterB"
        app:layout_constraintBottom_toTopOf="@+id/deleteB"
        app:layout_constraintTop_toBottomOf="@+id/deleteB"
        app:layout_constraintLeft_toRightOf="@+id/deleteB" />

    <Button
        android:id="@+id/enterB"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/enter"
        style="@style/numBtnStyle"
        app:layout_constraintBottom_toTopOf="@+id/zeroB"
        app:layout_constraintTop_toBottomOf="@+id/zeroB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/zeroB"
        android:onClick="userHasSubmitted"/>

    <TextView
        android:id="@+id/levelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levelTag"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/startButton"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/displayTv" />

    <TextView
        android:id="@+id/scoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        style="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
